[package]
name = "pixiv-image-proxy"
version = "0.1.1"
edition = "2024"
description = "A high-performance reverse proxy server for Pixiv images"
license = "Apache 2.0"
authors = ["Rorical <ro@rorical.blue>"]
readme = "README.md"
repository = "https://github.com/Rorical/pixiv-image-proxy"
keywords = ["proxy", "pixiv", "https", "reverse-proxy", "streaming"]

[[bin]]
name = "pixiv-image-proxy"
path = "src/main.rs"

[[example]]
name = "generate_key"
path = "examples/generate_key.rs"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bytes = "1.10.1"
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
rusty-s3 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4"] }
aes-gcm = "0.10"
flate2 = "1.0"
rand = "0.8"
base64 = "0.21"
